--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,23 @@
-*{
-  margin:0;
+* {
+  margin: 0;
   padding: 0;
-  
+}
+
+/* Ana konteyner için */
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+.container {
+  min-height: 100vh; /* Ekran yüksekliği kadar bir min-height belirleyin */
+  position: relative;
+  padding-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Footer yüksekliği */
 }
